# ari-lang

./: Cargo.toml  README.md
ari/: Cargo.toml  test.ari  test2.ari  test5.ari  test6.ari  test7.ari  test8.ari
ari/src/: main.rs
ari_errors/: Cargo.toml
ari_errors/src/: lib.rs
ari_parser/: Cargo.toml
ari_parser/src/: ast.rs  environment.rs  function.rs  lib.rs  parser.rs  s.rs  scanner.rs  token.rs
samples/: test3.ari  test4.ari  test9.ari
samples/public/: index.html
