[package]
name = "ari"
version = "0.1.0"
authors = ["Fong Yoong <fongyoong8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ari_parser = {path = "../ari_parser"}
ari_errors = {path = "../ari_errors"}

# For Linux
[target.x86_64-unknown-linux-musl]
linker = "rust-lld"